--- a/Development/jsDeveloper.html
+++ b/Development/jsDeveloper.html
@@ -28,20 +28,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>عداد الذكر</title>
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="./asstes/css/styles.css">
   </head>
   <body>
     <div class="counter-box">
       <h1>عدّاد الذكر</h1>
-      <button type="button" class="btn-thekr" id="thekr">
-        سبحان الله وبحمده سبحان الله
+      <h3 onclick="changeDisplayedThekr()" id="athkar"> سبحان الله وبحمده سبحان الله </h3>
+      <button onclick="resetCounter()" type="button" class="btn-thekr" id="reset">
+        <img src="./asstes/css/reset.png">
       </button>
+      <button onclick="decrementCounter()" id="countButton">10</button>
+      
       <div id="buttons">
         <!-- اجعل عدد مرات التكرار يتغير بتغير الذكر - بونص -->
         <!-- styles.css المناسب من صفحة classالخاص به وعين له ال idقم بإضافة زرين كل منهما يحمل ال -->
         <!-- زري العداد والتصفير -->
       </div>
     </div>
-    <script src="./assets/js/scripts.js"></script>
+    <script src="./asstes/js/scripts.js"></script>
   </body>
 </html>
